--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="main">
         <h1 id="title">Nikola Tesla</h1>
-        <p>Nikola Tesla was born an ethnic <b>Serb</b> in the village of <b>Smiljan</b>, within the Military Frontier, in the <b>Austrian Empire</b>.</p>
+        <p>Nikola Tesla was born an ethnic <strong>Serb</strong> in the village of <strong>Smiljan</strong>, within the Military Frontier, in the <strong>Austrian Empire</strong>.</p>
 
         <section id="tribute-info">
             <div class="info1">
@@ -37,43 +37,43 @@
                 </picture>
                 <ol>
                     <li><details>
-                        <summary><b>A new system of alternate current motors and transformers</b></summary>
+                        <summary><strong>A new system of alternate current motors and transformers</strong></summary>
                         <p>Lecture given at the American Institute of Electrical Engineers in New York, May 16, 1888.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>Experiments with alternate currents of very high frequency and their application to methods of artificial illumination</b></summary>
+                        <summary><strong>Experiments with alternate currents of very high frequency and their application to methods of artificial illumination</strong></summary>
                         <p>Lecture given at the American Institute of Electrical Engineers at Columbia College, New York, May 20, 1891.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>Experiments with alternate currents of high potential and high frequency</b></summary>
+                        <summary><strong>Experiments with alternate currents of high potential and high frequency</strong></summary>
                         <p>Lecture given to the Institute of Electrical Engineers in London on February 3, 1892, and at the Royal Institute in London on February 4, 1892. It was given again to the International Association of Electrical Engineers and to the Société Française de Physique in Paris.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>On light and other high frequency phenomena</b></summary>
+                        <summary><strong>On light and other high frequency phenomena</strong></summary>
                         <p>Lecture given at the Franklin Institute in Philadelphia on February 24, 1893, and at the National Electric Light Association in St Louis on March 1, 1893.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>On mechanical and electrical oscillators</b></summary>
+                        <summary><strong>On mechanical and electrical oscillators</strong></summary>
                         <p>Lecture given on August 25, 1893, in the hall adjoining the Agricultural Building at the Chicago World’s Fair. This lecture was not published and the manuscript was not preserved among Tesla’s papers. It was most probably destroyed, along with his other belongings, in the fire of March 13, 1895. Thanks to journalist and publicist T.K. Martin, a detailed overview of the lecture and Tesla’s experiments appeared in the press at the time.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>High frequency oscillators for electrotherapeutic and other purposes</b></summary>
+                        <summary><strong>High frequency oscillators for electrotherapeutic and other purposes</strong></summary>
                         <p>Lecture given to the Electro-Therapeutic Society in Buffalo on September 13, 1898.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>High-frequency oscillators and controls for electric circuits</b></summary>
+                        <summary><strong>High-frequency oscillators and controls for electric circuits</strong></summary>
                         <p>Lecture given to the New York Academy of Sciences on April 6, 1897.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>On the art of teleautomatics</b></summary>
+                        <summary><strong>On the art of teleautomatics</strong></summary>
                         <p>Lecture given on May 13, 1899, at the Chicago Business Club. This lecture is preserved in an incomplete and unfinished form in the Archives of the Nikola Tesla Museum.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>The phenomenon of high frequencies</b></summary>
+                        <summary><strong>The phenomenon of high frequencies</strong></summary>
                         <p>Experimental demonstrations in the Havemeyer Hall of Columbia University, New York on the evening of April 12, 1901.</p>
                       </details></li>
                     <li><details>
-                        <summary><b>New inventions by Tesla</b></summary>
+                        <summary><strong>New inventions by Tesla</strong></summary>
                         <p>Lecture at a meeting of the New York branch of the National Electric Light Association held in the New York building of the Association of Electrical Engineers on the evening of Monday, May 15, 1911.</p>
                       </details></li>
                 </ol>
@@ -82,12 +82,12 @@
         <blockquote  cite="https://nikolateslamuseum.org/en/">
             You should read more about this incredible human being
             on his
-            <b><cite>
+            <strong><cite>
                 <a id="tribute-link" href="https://en.wikipedia.org/wiki/Nikola_Tesla" target="_blank">Wikipedia entry</a>
-            </cite></b><br>
+            </cite></strong><br>
             or on the official website of the Tesla Museum in Belgrade
             <cite>
-                <b><a id="tribute-link" href="https://nikolateslamuseum.org/en/" target="_blank">Nikola Tesla Museum official website.</a></b>
+                <strong><a id="tribute-link" href="https://nikolateslamuseum.org/en/" target="_blank">Nikola Tesla Museum official website.</a></strong>
             </cite>
         </blockquote>
     </main>
